--- a/mentor-me/package.json
+++ b/mentor-me/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.2.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "normalize.css": "^8.0.1",
@@ -17,7 +18,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
